feat(core): refine test environment variables, fix middleware proxy, and update generator services

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,23 @@
 # .env.local.example — copy to .env.local and fill in real values
-MAILGUN_API_KEY=your-mailgun-api-key-here
-MAILGUN_DOMAIN=your-mailgun-domain.com
-MAILGUN_FROM_EMAIL=noreply@your-domain.com
-MAILGUN_FROM_NAME=PVH Reports
-MAILGUN_TO_EMAIL=recipient@your-domain.com
+
+# Admin password for /admin page
+ADMIN_PASSWORD=your-admin-password-here
+
+# SQLite database (Prisma)
+DATABASE_URL="file:./prisma/dev.db"
+
+# --- Subdomain routing (local development) ---
+# Modern browsers resolve *.localhost to 127.0.0.1 automatically.
+# If not, add these entries to /etc/hosts:
+#   127.0.0.1  admin.localhost
+#   127.0.0.1  test.localhost
+#
+# Then access:
+#   http://admin.localhost:3000  → admin interface
+#   http://test.localhost:3000   → test interface
+#
+# In production the nginx reverse proxy forwards Host headers to Next.js,
+# so no additional env vars are needed for subdomain detection.
+
+# Oculta el botón de Autocompletar al azar en tests. Si es 'true', se muestra.
+NEXT_PUBLIC_ENABLE_AUTOFILL=false
