--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
+
+# SQLite database
+prisma/dev.db
+prisma/dev.db-journal
