--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:restart": "nodemon",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "test": "vitest run"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@prisma/adapter-better-sqlite3": "^7.4.0",
+    "@prisma/client": "^7.4.0",
+    "better-sqlite3": "^12.6.2",
     "docx": "^9.5.3",
     "form-data": "^4.0.5",
     "mailgun.js": "^12.7.0",
@@ -20,11 +25,14 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "nodemon": "^3.1.11",
+    "prisma": "^7.4.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
